fix: fixed the image stretch issue on the about us page

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -630,8 +630,7 @@ $color-footer: #1B1B1B;
             flex-direction: column;
 
             &--image {
-                // margin: 0 auto;
-                padding: 0 1.5rem;
+                width: 100%;
             }
 
             &--content {
